fix alignment of post category selector

--- a/web/wiki/create/style.css
+++ b/web/wiki/create/style.css
@@ -259,7 +259,7 @@ input[type="text"] {
 
 .category:first-child {
     & label {
-        padding-right: 2rem;
+        padding-right: 3.5rem;
     }
 }
 
